refactor: Removes deprecated APIs
* /arrow/csv/:filename
* /arrow/parquet/:filename
* /json/csv/:filename
