# doc/openapi.v1.yaml
@@ -8,7 +8,7 @@ info:
 
 tags:
   - name: DataFrame
-    description: Query based Arrow, JSON and CSV responder
+    description: Non session query based Arrow, JSON and CSV responder
   - name: Session
     description: Session context
   - name: Data Source
@@ -19,127 +19,8 @@ tags:
     description: Session based context query
   - name: System
     description: Other system APIs
-  - name: Arrow
-    description: Non query Arrow responder (Deprecated)
-  - name: JSON
-    description: Non query JSON responder (Deprecated)
 
 paths:
-  /arrow/csv/{fileName}:
-    get:
-      tags:
-        - Arrow
-      summary: Gets CSV file into Arrow response format **(Deprecated)**
-      description: Single CSV file can only provided.
-      operationId: arrowCsv
-      parameters:
-        - name: fileName
-          in: path
-          description: Target file
-          required: true
-          schema:
-            type: string
-          example: sales.csv
-        - name: inferSchemaRows
-          in: query
-          description: Infer the schema rows
-          schema:
-            type: number
-          example: 50
-        - name: hasHeader
-          in: query
-          description: Content has header row
-          schema:
-            type: boolean
-          example: true
-        - name: dateTimePreset
-          in: query
-          description: Specified preset date time format
-          schema:
-            type: string
-          example: iso
-        - name: dateTimeRegex
-          in: query
-          description: Specified date time regex
-          schema:
-            type: string
-          example: '^\d{4}/\d{2}/\d{2} \d{2}:\d{2}:\d{2}$'
-        - name: dateTimeFormat
-          in: query
-          description: Specified date time format
-          schema:
-            type: string
-          example: '%y/%m/%d %H:%M:%S'
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/vnd.apache.arrow.stream:
-              schema:
-                $ref: '#/components/schemas/responseArrow'
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error400'
-  /arrow/parquet/{fileName}:
-    get:
-      tags:
-        - Arrow
-      summary: Gets parquet file into Arrow response format **(Deprecated)**
-      description: Single parquet file can only provided.
-      operationId: arrowParquet
-      parameters:
-        - name: fileName
-          in: path
-          description: Target file
-          required: true
-          schema:
-            type: string
-          example: customer.parquet
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/vnd.apache.arrow.stream:
-              schema:
-                $ref: '#/components/schemas/responseArrow'
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error400'
-  /json/csv/{fileName}:
-    get:
-      tags:
-        - JSON
-      summary: Gets JSON file into Arrow response format **(Deprecated)**
-      description: Single parquet file can only provided.
-      operationId: jsonCsv
-      parameters:
-        - name: fileName
-          in: path
-          description: Target file
-          required: true
-          schema:
-            type: string
-          example: customer.csv
-      responses:
-        '200':
-          description: Successful operation
-          content:
-            application/vnd.apache.arrow.stream:
-              schema:
-                $ref: '#/components/schemas/responseArrow'
-        '400':
-          description: Bad request
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/error400'
-
   /dataframe/query:
     post:
       tags:
