# lib/src/response/handler/json_csv.rs
@@ -1,14 +1,0 @@
-// json_csv.rs - JSON with CSV handler
-// Sasaki, Naoki <nsasaki@sal.co.jp> January 2, 2023
-//
-
-// use crate::http_error::ResponseError;
-// use axum::{extract::Path, response::IntoResponse};
-
-#[allow(clippy::unused_async)] // requires `async` in axum
-pub async fn csv_responder(/* Path(file_name): Path<String> */)
-/* -> Result<impl IntoResponse, ResponseError> */
-{
-    // log::info!("Accessing CSV to JSON responder");
-    unimplemented!("Will be implemented CSV to JSON responder");
-}
